An experiment support for Jackpot static code analysis.

--- a/make/autoconf/configure.ac
+++ b/make/autoconf/configure.ac
@@ -200,6 +200,9 @@ FLAGS_SETUP_FLAGS
 JDKOPT_SETUP_DEBUG_SYMBOLS
 JDKOPT_SETUP_CODE_COVERAGE
 
+# Jackpot static analysis
+JDKOPT_SETUP_JACKPOT
+
 # AddressSanitizer
 JDKOPT_SETUP_ADDRESS_SANITIZER
 
