--- a/make/autoconf/spec.gmk.in
+++ b/make/autoconf/spec.gmk.in
@@ -402,6 +402,9 @@ JCOV_HOME=@JCOV_HOME@
 JCOV_INPUT_JDK=@JCOV_INPUT_JDK@
 JCOV_FILTERS=@JCOV_FILTERS@
 
+JACKPOT_ENABLED=@JACKPOT_ENABLED@
+JACKPOT_HOME=@JACKPOT_HOME@
+
 # AddressSanitizer
 export ASAN_ENABLED:=@ASAN_ENABLED@
 export DEVKIT_LIB_DIR:=@DEVKIT_LIB_DIR@
